# Fastserve

./: Cargo.toml  README.md  docker-compose.yml  webapp.Dockerfile
src/: api.rs  app.rs  global.rs  lib.rs  main.rs  server.rs  utils.rs  webhandler.rs
src/server/: utils.rs
static/: 404.html  index.html
