[package]
name = "fastserve"
version = "0.1.4"
edition = "2021"
description = "A simple and quick way of creating a backend to serve static files / api endpoints"
license = "MIT"
keywords = ["webserver", "backend", "api"]
repository = "https://github.com/Arturr-H/Rust-server.git"
homepage = "https://artur.red"
documentation = "https://artur.red"

[source.crates-io]
registry = "git://github.com/rust-lang/crates.io-index.git"

[dependencies]
lazy_static = "0.1"
rand = "0.8"
termcolor = "1.1"
reqwest = { version = "0.11", features = ["json", "blocking"] }
tokio = { version = "1", features = ["full"] }
num = "0.2.1"